Fix the blank on bottom on mobile screens

--- a/Randominator/wwwroot/css/app.scss
+++ b/Randominator/wwwroot/css/app.scss
@@ -16,6 +16,7 @@ a, .btn-link {
 
 .page {
     color: var(--text-color);
+    height: 100vh;
 }
 
 main {
